bg gradient changes and schedule changes

--- a/batch10_updated_schedule.html
+++ b/batch10_updated_schedule.html
@@ -7,7 +7,9 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
-    <body class="bg-gray-100 flex items-center justify-center min-h-screen">
+    <body
+        class="bg-gray-100 bg-gradient-to-br from-stone-300 to-teal-300 flex items-center justify-center min-h-screen"
+    >
         <div class="container mx-auto p-8">
             <h1 class="text-3xl font-bold text-center text-blue-800 mb-4">
                 Data Land Technology's Batch 10 Schedule
@@ -79,10 +81,10 @@
                 Wednesday: [{ class: "JSON", time: "9:40 to 11:30" }],
                 Thursday: [{ class: "-", time: "-" }],
                 Friday: [
-                    { class: "JS Small App", time: "7:30 to 9:30" },
+                    { class: "JS Small App", time: "8:00 to 9:30" },
                     { class: "Laravel", time: "9:40 to 11:30" },
                 ],
-                Saturday: [{ class: "Tailwind CSS", time: "8:30 to 10:30" }],
+                Saturday: [{ class: "Tailwind CSS", time: "9:00 to 10:30" }],
                 Sunday: [{ class: "Python", time: "9:40 to 11:15" }],
             };
 
