--- a/index.html
+++ b/index.html
@@ -8,59 +8,63 @@
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
     <body
-        class="bg-gray-100 bg-gradient-to-br from-stone-300 to-teal-300 flex items-center justify-center min-h-screen"
+        class="bg-gray-100 bg-gradient-to-br from-stone-300 to-teal-300 flex items-center justify-center min-h-screen p-4"
     >
-        <div class="container mx-auto p-8">
-            <h1 class="text-3xl font-bold text-center text-blue-800 mb-4">
+        <div class="container mx-auto p-4 sm:p-6 md:p-8">
+            <h1
+                class="text-xl sm:text-2xl md:text-3xl font-bold text-center text-blue-800 mb-4"
+            >
                 Data Land Technology's Batch 10 Schedule
             </h1>
 
             <div id="warningNote" class="text-center mb-4 hidden">
-                <p class="text-lg font-semibold text-red-600">
+                <p
+                    class="text-sm sm:text-base md:text-lg font-semibold text-red-600"
+                >
                     Python class will start on 8 Sept 2024
                 </p>
             </div>
 
-            <div class="flex justify-center space-x-4 mb-8">
+            <div class="flex flex-wrap justify-center gap-2 sm:gap-4 mb-8">
                 <button
                     id="btnMonday"
-                    class="btn-monday px-6 py-2 bg-blue-600 text-white font-bold rounded-lg hover:bg-blue-700"
+                    class="btn-monday px-4 py-2 sm:px-6 sm:py-3 bg-blue-600 text-white font-bold rounded-lg hover:bg-blue-700"
                 >
                     Monday
                 </button>
                 <button
                     id="btnTuesday"
-                    class="btn-tuesday px-6 py-2 bg-green-600 text-white font-bold rounded-lg hover:bg-green-700"
+                    class="btn-tuesday px-4 py-2 sm:px-6 sm:py-3 bg-green-600 text-white font-bold rounded-lg hover:bg-green-700"
                 >
                     Tuesday
                 </button>
                 <button
                     id="btnWednesday"
-                    class="btn-wednesday px-6 py-2 bg-yellow-600 text-white font-bold rounded-lg hover:bg-yellow-700"
+                    class="btn-wednesday px-4 py-2 sm:px-6 sm:py-3 bg-yellow-600 text-white font-bold rounded-lg hover:bg-yellow-700"
                 >
                     Wednesday
                 </button>
                 <button
                     id="btnThursday"
-                    class="btn-thursday px-6 py-2 bg-red-600 text-white font-bold rounded-lg hover:bg-red-700"
+                    class="btn-thursday px-4 py-2 sm:px-6 sm:py-3 bg-red-600 text-white font-bold rounded-lg hover:bg-red-700"
                 >
                     Thursday
                 </button>
                 <button
                     id="btnFriday"
-                    class="btn-friday px-6 py-2 bg-purple-600 text-white font-bold rounded-lg hover:bg-purple-700"
+                    class="btn-friday px-4 py-2 sm:px-6 sm:py-3 bg-purple-600 text-white font-bold rounded-lg hover:bg-purple-700"
                 >
                     Friday
                 </button>
                 <button
                     id="btnSaturday"
-                    class="btn-saturday px-6 py-2 bg-pink-600 text-white font-bold rounded-lg hover:bg-pink-700"
+                    class="btn-saturday px-4 py-2 sm:px-6 sm:py-3 bg-pink-600 text-white font-bold rounded-lg hover:bg-pink-700"
                 >
                     Saturday
                 </button>
                 <button
                     id="btnSunday"
-                    class="btn-sunday px-6 py-2 bg-gray-600 text-white font-bold rounded-lg hover:bg-gray-700"
+                    class="btn-sunday px-4 py-2 sm:px-6 sm:py-3 bg-gray-600 text-white font-bold rounded-lg hover:bg-gray-700"
                 >
                     Sunday
                 </button>
@@ -68,9 +72,9 @@
 
             <div
                 id="classTime"
-                class="p-8 bg-white shadow-xl rounded-lg text-center hidden"
+                class="p-4 sm:p-6 bg-white shadow-xl rounded-lg text-center hidden"
             >
-                <ul id="scheduleList" class="space-y-4"></ul>
+                <ul id="scheduleList" class="space-y-2 sm:space-y-4"></ul>
             </div>
         </div>
 
@@ -81,7 +85,7 @@
                 Wednesday: [{ class: "JSON", time: "9:40 to 11:30" }],
                 Thursday: [{ class: "-", time: "-" }],
                 Friday: [
-                    { class: "JS Small App", time: "8:00 to 9:30" },
+                    { class: "JS Small App", time: "7:30 to 9:30" },
                     { class: "Laravel", time: "9:40 to 11:30" },
                 ],
                 Saturday: [{ class: "Tailwind CSS", time: "9:00 to 10:30" }],
@@ -103,12 +107,12 @@
 
                     if (schedule.length > 0 && schedule[0].class !== "-") {
                         schedule.forEach((item) => {
-                            const listItem = `<li class="text-lg font-semibold text-gray-700">${item.class} (${item.time})</li>`;
+                            const listItem = `<li class="text-sm sm:text-base md:text-lg font-semibold text-gray-700">${item.class} (${item.time})</li>`;
                             scheduleList.append(listItem);
                         });
                     } else {
                         scheduleList.append(
-                            `<li class="text-lg font-semibold text-gray-700">No Class Today.<br/> Revise the lessons you learned this week.<br/> Recharge your mind and body.<br/> Get ready for the next week.</li>`,
+                            `<li class="text-sm sm:text-base md:text-lg font-semibold text-gray-700">No Class Today.<br/> Revise the lessons you learned this week.<br/> Recharge your mind and body.<br/> Get ready for the next week.</li>`,
                         );
                     }
 
