--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
     >
         <div class="container mx-auto p-4 sm:p-6 md:p-8">
             <h1
-                class="text-xl sm:text-2xl md:text-3xl font-bold text-center text-blue-800 mb-4"
+                class="text-xl sm:text-2xl md:text-3xl font-bold text-center text-transparent bg-clip-text bg-gradient-to-r from-blue-600 to-gray-600 mb-4"
             >
-                Data Land Technology's Batch 10 Schedule
+                Data Land Technology's
+                <span
+                    class="text-transparent bg-clip-text bg-gradient-to-r from-red-700 to-yellow-600"
+                >
+                    Batch 10
+                </span>
+                Schedule
             </h1>
 
             <div id="warningNote" class="text-center mb-4 hidden">
@@ -28,43 +34,43 @@
             <div class="flex flex-wrap justify-center gap-2 sm:gap-4 mb-8">
                 <button
                     id="btnMonday"
-                    class="btn-monday px-4 py-2 sm:px-6 sm:py-3 bg-blue-600 text-white font-bold rounded-lg hover:bg-blue-700"
+                    class="btn-monday px-4 py-2 sm:px-6 sm:py-3 bg-blue-600 text-white font-bold rounded-lg hover:bg-blue-700 transform hover:translate-y-1 hover:scale-105 transition-transform duration-300"
                 >
                     Monday
                 </button>
                 <button
                     id="btnTuesday"
-                    class="btn-tuesday px-4 py-2 sm:px-6 sm:py-3 bg-green-600 text-white font-bold rounded-lg hover:bg-green-700"
+                    class="btn-tuesday px-4 py-2 sm:px-6 sm:py-3 bg-green-600 text-white font-bold rounded-lg hover:bg-green-700 transform hover:translate-y-1 hover:scale-105 transition-transform duration-300"
                 >
                     Tuesday
                 </button>
                 <button
                     id="btnWednesday"
-                    class="btn-wednesday px-4 py-2 sm:px-6 sm:py-3 bg-yellow-600 text-white font-bold rounded-lg hover:bg-yellow-700"
+                    class="btn-wednesday px-4 py-2 sm:px-6 sm:py-3 bg-yellow-600 text-white font-bold rounded-lg hover:bg-yellow-700 transform hover:translate-y-1 hover:scale-105 transition-transform duration-300"
                 >
                     Wednesday
                 </button>
                 <button
                     id="btnThursday"
-                    class="btn-thursday px-4 py-2 sm:px-6 sm:py-3 bg-red-600 text-white font-bold rounded-lg hover:bg-red-700"
+                    class="btn-thursday px-4 py-2 sm:px-6 sm:py-3 bg-red-600 text-white font-bold rounded-lg hover:bg-red-700 transform hover:translate-y-1 hover:scale-105 transition-transform duration-300"
                 >
                     Thursday
                 </button>
                 <button
                     id="btnFriday"
-                    class="btn-friday px-4 py-2 sm:px-6 sm:py-3 bg-purple-600 text-white font-bold rounded-lg hover:bg-purple-700"
+                    class="btn-friday px-4 py-2 sm:px-6 sm:py-3 bg-purple-600 text-white font-bold rounded-lg hover:bg-purple-700 transform hover:translate-y-1 hover:scale-105 transition-transform duration-300"
                 >
                     Friday
                 </button>
                 <button
                     id="btnSaturday"
-                    class="btn-saturday px-4 py-2 sm:px-6 sm:py-3 bg-pink-600 text-white font-bold rounded-lg hover:bg-pink-700"
+                    class="btn-saturday px-4 py-2 sm:px-6 sm:py-3 bg-pink-600 text-white font-bold rounded-lg hover:bg-pink-700 transform hover:translate-y-1 hover:scale-105 transition-transform duration-300"
                 >
                     Saturday
                 </button>
                 <button
                     id="btnSunday"
-                    class="btn-sunday px-4 py-2 sm:px-6 sm:py-3 bg-gray-600 text-white font-bold rounded-lg hover:bg-gray-700"
+                    class="btn-sunday px-4 py-2 sm:px-6 sm:py-3 bg-gray-600 text-white font-bold rounded-lg hover:bg-gray-700 transform hover:translate-y-1 hover:scale-105 transition-transform duration-300"
                 >
                     Sunday
                 </button>
@@ -72,7 +78,7 @@
 
             <div
                 id="classTime"
-                class="p-4 sm:p-6 bg-white shadow-xl rounded-lg text-center hidden"
+                class="p-4 sm:p-6 bg-white shadow-xl rounded-lg text-center hidden transform hover:translate-y-1 hover:scale-105 transition-transform duration-300"
             >
                 <ul id="scheduleList" class="space-y-2 sm:space-y-4"></ul>
             </div>
@@ -85,11 +91,11 @@
                 Wednesday: [{ class: "JSON", time: "9:40 to 11:30" }],
                 Thursday: [{ class: "-", time: "-" }],
                 Friday: [
-                    { class: "JS Small App", time: "7:30 to 9:30" },
+                    { class: "JS Small App", time: "8:00 to 9:30" },
                     { class: "Laravel", time: "9:40 to 11:30" },
                 ],
                 Saturday: [{ class: "Tailwind CSS", time: "9:00 to 10:30" }],
-                Sunday: [{ class: "Python", time: "9:40 to 11:15" }],
+                Sunday: [{ class: "-", time: "-" }],
             };
 
             $(document).ready(function () {
@@ -104,6 +110,7 @@
                     const schedule = schedules[day];
                     const scheduleList = $("#scheduleList");
                     scheduleList.empty();
+                    $("#classTime").fadeOut(300);
 
                     if (schedule.length > 0 && schedule[0].class !== "-") {
                         schedule.forEach((item) => {
